# github_issues_protobuf

./: .gitignore  GithubIssuesProto.ipynb  README.md  addressbook.proto  addressbook_pb2.py  githubissues  issues.proto  issues_pb2.py  main.py  out.pb  output.pb  pyproject.toml  utils.py
notebooks/: GithubIssuesProto.ipynb  Tutorial.ipynb
