[tool.poetry]
name = "github-issues-protobuf"
version = "0.1.0"
description = ""
authors = ["luarss <39641663+luarss@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.25.1"
jupyter = "^1.0.0"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
